--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1> Faust </h1>
+<html lang="en">
+<head>
+    <meta charset = "UTF-8">
+    <title> Faust Malabanan</title>
+    <link rel= "stylesheet" href= "style.css">
+    <script src="js/script.js"> </script>
+</head>
+
+
