--- a/index.html
+++ b/index.html
@@ -6,4 +6,13 @@
     <script src="js/script.js"> </script>
 </head>
 
+<body>
+    <header>
+        <h1> Faust Malabanan</h1>
+        <nav>
+            <a href = "about.html"> About Me</a>
+        </nav>
+    </header>
+</body>
+
 
