--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html lang="en">
 <head>
     <meta charset = "UTF-8">
-    <title> Faust Malabanan</title>
+    <title> Faust</title>
     <link rel= "stylesheet" href= "style.css">
     <script src="js/script.js"> </script>
 </head>
 
 <body>
     <header>
-        <h1> Faust Malabanan</h1>
+        <h1> Faust</h1>
         <nav>
-            <a href = "about.html"> About Me</a>
+            <a href = "about.html"> About</a>
         </nav>
     </header>
 </body>
