--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
 <body>
     <header>
-        <h1> Faust</h1>
+        <h1>Faust</h1>
         <nav>
             <a href = "about.html"> About</a>
         </nav>
+        <form>
+            <input type="text" id="search" placeholder="Search...">
+            <button type="submit">Search</button>
+        </form>
     </header>
 </body>
 
