--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Faust</h1>
+        <img> src = "assets/profile.png" alt = "Profile Picture">
         <nav>
             <a href = "about.html"> About</a>
         </nav>
